--- a/src/Components/Waitlist/style.scss
+++ b/src/Components/Waitlist/style.scss
@@ -31,9 +31,9 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 32px;
+    width: 80%;
     img {
-      width: 696px;
-      height: 165px;
+      width: 100%;
     }
     .description {
       color: var(--black-80, rgba(28, 28, 28, 0.8));
