feat: add platform video

--- a/src/Components/HomePage/Platform/style.scss
+++ b/src/Components/HomePage/Platform/style.scss
@@ -29,33 +29,22 @@
     align-items: center;
     gap: 16px;
     z-index: 1;
-    img {
-      width: 100%;
-      height: 873px;
+    overflow: hidden;
+    video {
+      width: calc(100% + 1px);
+      height: fit-content;
     }
     @media (max-width: 1439px) {
       width: 944px;
-      img {
-        height: 710px;
-      }
     }
     @media (max-width: 1024px) {
       width: 584px;
-      img {
-        height: 435px;
-      }
     }
     @media (max-width: 767px) {
       width: 447px;
-      img {
-        height: 323px;
-      }
     }
     @media (max-width: 479px) {
       width: 287px;
-      img {
-        height: 278px;
-      }
     }
     .platform-description {
       display: flex;
