--- a/src/Components/HomePage/Platform/style.scss
+++ b/src/Components/HomePage/Platform/style.scss
@@ -71,6 +71,27 @@
         gap: 12px;
       }
       .title {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 10px;
+        label {
+          display: flex;
+          align-items: flex-start;
+          gap: 10px;
+          img {
+            width: 160px;
+            height: 48px;
+            @media (max-width: 767px) {
+              width: 130px;
+              height: 45px;
+            }
+            @media (max-width: 479px) {
+              width: 100px;
+              height: 39px;
+            }
+          }
+        }
         @media (max-width: 767px) {
           font-size: 40px;
           font-style: normal;
