update: platform update

--- a/src/Components/HomePage/Hero/style.scss
+++ b/src/Components/HomePage/Hero/style.scss
@@ -1,7 +1,7 @@
 .hero-container {
   display: flex;
   justify-content: center;
-  padding: 0px 60px;
+  padding: 0px 60px 200px 60px;
   margin-top: 76px;
   background-color: #fafafa;
   @media (max-width: 1439px) {
